--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
+        "sass": "^1.77.8",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
-        "vue": "^3.4.0"
+        "vite-plugin-vuetify": "^2.0.3",
+        "vue": "^3.4.0",
+        "vuetify": "^3.6.13"
     },
     "dependencies": {
+        "@mdi/font": "^7.4.47",
         "flowbite": "^2.4.1",
+        "tw-elements": "^2.0.0",
         "vue-material-design-icons": "^5.3.0",
         "vue3-carousel": "^0.3.3"
     }
