--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
         "vite": "^5.0",
         "vite-plugin-vuetify": "^2.0.3",
         "vue": "^3.4.0",
-        "vuetify": "^3.6.13"
+        "vuetify": "^3.7.0-beta.1"
     },
     "dependencies": {
         "@mdi/font": "^7.4.47",
         "flowbite": "^2.4.1",
         "tw-elements": "^2.0.0",
         "vue-material-design-icons": "^5.3.0",
+        "vue-router": "^4.4.3",
         "vue3-carousel": "^0.3.3"
     }
 }
