--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     },
     "dependencies": {
         "@mdi/font": "^7.4.47",
+        "chart.js": "^4.4.4",
         "flowbite": "^2.4.1",
         "tw-elements": "^2.0.0",
+        "vue-chartjs": "^5.3.1",
         "vue-material-design-icons": "^5.3.0",
         "vue-router": "^4.4.3",
         "vue3-carousel": "^0.3.3"
