--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "flowbite": "^2.4.1",
         "tw-elements": "^2.0.0",
         "vue-chartjs": "^5.3.1",
+        "vue-css-donut-chart": "^2.1.0",
         "vue-material-design-icons": "^5.3.0",
         "vue-router": "^4.4.3",
         "vue3-carousel": "^0.3.3"
