--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "sass": "^1.77.8",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
+        "vite-plugin-pwa": "^0.20.5",
         "vite-plugin-vuetify": "^2.0.3",
         "vue": "^3.4.0",
         "vuetify": "^3.7.0-beta.1"
