--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "@inertiajs/vue3": "^1.0.0",
-        "@nuxtjs/vuetify": "^1.12.3",
-        "@tailwindcss/forms": "^0.5.3",
-        "@vitejs/plugin-vue": "^5.0.0",
-        "autoprefixer": "^10.4.12",
-        "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.31",
-        "sass": "^1.77.8",
-        "tailwindcss": "^3.2.1",
-        "vite": "^5.0",
-        "vite-plugin-pwa": "^0.20.5",
-        "vite-plugin-vuetify": "^2.0.3",
-        "vue": "^3.4.0",
-        "vuetify": "^3.7.0-beta.1"
-    },
-    "dependencies": {
-        "@mdi/font": "^7.4.47",
-        "chart.js": "^4.4.4",
-        "flowbite": "^2.4.1",
-        "tw-elements": "^2.0.0",
-        "vue-chartjs": "^5.3.1",
-        "vue-css-donut-chart": "^2.1.0",
-        "vue-material-design-icons": "^5.3.0",
-        "vue-router": "^4.4.3",
-        "vue3-carousel": "^0.3.3"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "pwa-icons": "npx pwa-assets-generator --preset minimal public/favicon.svg"
+  },
+  "devDependencies": {
+    "@inertiajs/vue3": "^1.0.0",
+    "@nuxtjs/vuetify": "^1.12.3",
+    "@tailwindcss/forms": "^0.5.3",
+    "@vitejs/plugin-vue": "^5.0.0",
+    "autoprefixer": "^10.4.12",
+    "axios": "^1.6.4",
+    "laravel-vite-plugin": "^1.0",
+    "postcss": "^8.4.31",
+    "sass": "^1.77.8",
+    "tailwindcss": "^3.2.1",
+    "vite": "^5.0",
+    "vite-plugin-pwa": "^0.20.5",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue": "^3.4.0",
+    "vuetify": "^3.7.0-beta.1"
+  },
+  "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "chart.js": "^4.4.4",
+    "flowbite": "^2.4.1",
+    "pwa-asset-generator": "^6.3.2",
+    "tw-elements": "^2.0.0",
+    "vue-chartjs": "^5.3.1",
+    "vue-css-donut-chart": "^2.1.0",
+    "vue-material-design-icons": "^5.3.0",
+    "vue-router": "^4.4.3",
+    "vue3-carousel": "^0.3.3"
+  }
 }
