--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@vueuse/core": "^11.0.3",
     "chart.js": "^4.4.4",
     "flowbite": "^2.4.1",
+    "mobile-device-detect": "^0.4.3",
     "pwa-asset-generator": "^6.3.2",
     "tw-elements": "^2.0.0",
     "vue-chartjs": "^5.3.1",
