--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "flowbite": "^2.4.1",
     "mobile-device-detect": "^0.4.3",
     "pwa-asset-generator": "^6.3.2",
+    "swiper": "^11.1.14",
     "tw-elements": "^2.0.0",
     "vue-chartjs": "^5.3.1",
     "vue-css-donut-chart": "^2.1.0",
