--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@mdi/font": "^7.4.47",
     "@vueuse/core": "^11.0.3",
     "chart.js": "^4.4.4",
-    "flowbite": "^2.4.1",
+    "flowbite": "^2.5.1",
+    "flowbite-vue": "^0.1.6",
     "mobile-device-detect": "^0.4.3",
     "pwa-asset-generator": "^6.3.2",
     "swiper": "^11.1.14",
